# pyfont

./: .gitignore  README.md  pyproject.toml
fnt/: __init__.py  cmap.py  collection.py  directory.py  dynamic.py  exceptions.py  file.py  file_font.py  flags.py  font.py  head.py  tables.py  types.py
fnt/legacy/: types.py
fnt/legacy/tables/: OS2.py  cmap.py  cvt.py  fpgm.py  gasp.py  glyf.py  head.py  hhea.py  maxp.py  name.py  post.py  prep.py  sbix.py
fnt/parsing/: __init__.py
fnt/tables/: __init__.py  cmap.py  core.py  hhea.py
fnt/tables/outlines/: SVG.py  cvt.py  fpgm.py  gasp.py  glyf.py  loca.py
fnt/tables/required/: OS2.py  cmap.py  head.py  hhea.py  hmtx.py  maxp.py  name.py  post.py
tests/unit/: test_types.py
