[project]
name = "pyfont"
version = "0.0.1"
description = ""
readme = "README.md"
authors = [
    { name = "DragonMoffon" },
]
classifiers = [
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    # "License :: OSI Approved :: MIT License"
]
requires-python = ">= 3.13"
dependencies = [
]


[project.optional-dependencies]
dev = [
    "pytest==7.2.1",
    "flake8==6.0.0",
    "mypy==1.14.1",
    "pylint==3.2.7",
    "ruff==0.11.2",
    "black==24.8.0"
]


[tool.setuptools]
packages = ['tests', 'fnt']